<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">bookManager-Android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="book_list_title">書籍一覧</string>
    <string name="book_add_title">書籍追加</string>
    <string name="book_edit_title">書籍編集</string>
    <string name="setting_title">設定</string>

    <string name="account_setting_title">アカウント設定</string>
    <string name="account_login_title">ログイン</string>
    <string name="not_entered_message">未入力項目があります</string>
    <string name="confirm">確認</string>
    <string name="ok_button">OK!</string>
    <string name="login_complete">ログインが完了しました</string>

    <string name="not_match_passwarad">パスワードが一致しません</string>
    <string name="registration_complete">登録が完了しました</string>
    <string name="edit_complete">編集が完了しました</string>

    <string name="no_more_data">これ以上はデータがありません</string>
    <string name="price_and_tax">円+税</string>
    <string name="day_select">日付選択</string>
    <string name="back">戻る</string>

    <string name="password">パスワード</string>
    <string name="mail_adress">メールアドレス</string>
    <string name="confpass">パスワード確認</string>
    <string name="input_password">パスワードを入力してください</string>
    <string name="input_mail_adress">メールアドレスを入力してください</string>
    <string name="inout_confpass">もう一度パスワードを入力してください</string>

    <string name="login">ログイン</string>
    <string name="account_setting">アカウント設定</string>
    <string name="image_send">画像添付</string>
    <string name="read_more_button">さらに読みこむ</string>

    <string name="book_title">書籍名</string>
    <string name="book_price">金額</string>
    <string name="book_date">購入日時</string>

    <string name="input_book_title">書籍名を入力してください</string>
    <string name="input_book_price">金額を入力してください</string>
    <string name="input_book_date">購入日を入力してください</string>

    <string name="close">閉じる</string>
    <string name="save">保存</string>
    <string name="book_add">書籍追加</string>

    <string name="login_post_data">mail_address=%1$s&amp;password=%2$s</string>
    <string name="register_post_data">mail_address=%1$s&amp;password=%2$s</string>
    <string name="add_post_data">image_url=a&amp;name=%1$s&amp;price=%2$s&amp;purchase_date=%3$s</string>
    <string name="edit_post_data">id=%1$s&amp;image_url=x&amp;name=%2$s&amp;price=%3$s&amp;purchase_date=%4$s</string>

    <string name="account_login_url">http://app.com/account/login</string>
    <string name="account_register_url">http://app.com/account/register</string>
    <string name="book_list_url">http://app.com/book/get</string>
    <string name="book_add_url">http://app.com/book/regist</string>
    <string name="book_edit_url">http://app.com/book/update</string>
    <string name="scroll_weight">1</string>
</resources>
