<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_weight="@string/scroll_weight">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="BookEditFragment">

        <ImageView
            android:layout_width="@dimen/image_view_width"
            android:layout_height="@dimen/image_view_height"
            android:id="@+id/book_image"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="@dimen/imageview_margin_top"
            android:layout_marginLeft="@dimen/imageview_margin_left"
            android:layout_marginStart="@dimen/imageview_margin_start"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_send"
            android:id="@+id/send_button"
            android:layout_alignTop="@+id/book_image"
            android:layout_alignRight="@+id/main_layout"
            android:layout_alignEnd="@+id/main_layout"
            android:layout_marginRight="@dimen/send_button_margin_right"
            android:layout_marginEnd="@dimen/send_button_margin_end"
            android:layout_marginTop="@dimen/send_button_margin_top"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_margin_height"
            android:gravity="center"
            android:layout_below="@+id/send_button"
            android:id="@+id/main_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/detail_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_title"
                android:id="@+id/text_book"
                android:textSize="@dimen/text_size"
                android:layout_alignParentTop="true"
                android:windowSoftInputMode="adjustResize"
                android:layout_alignLeft="@+id/add_book_title"
                android:layout_alignStart="@+id/add_book_title" />

            <EditText
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_book_title"
                android:id="@+id/add_book_title"
                android:layout_below="@+id/text_book"
                android:layout_marginTop="@dimen/text_field_interval" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_price"
                android:id="@+id/text_price"
                android:textSize="@dimen/text_size"
                android:layout_below="@+id/add_book_title"
                android:layout_alignLeft="@+id/add_book_title"
                android:layout_alignStart="@+id/add_book_title"
                android:layout_marginTop="@dimen/text_field_interval" />

            <EditText
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_book_price"
                android:id="@+id/add_book_price"
                android:layout_below="@+id/text_price"
                android:layout_marginTop="@dimen/text_field_interval"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_date"
                android:id="@+id/text_date"
                android:textSize="@dimen/text_size"
                android:layout_below="@+id/add_book_price"
                android:layout_alignLeft="@+id/add_book_price"
                android:layout_alignStart="@+id/add_book_price"/>

            <EditText
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_book_date"
                android:id="@+id/add_book_date"
                android:layout_below="@+id/text_date"
                android:layout_marginTop="@dimen/text_field_interval" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>