<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_weight="1"
    android:id="@+id/main_layout"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".AccountSettingActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_height"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/relative_margin_top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_adress"
                android:id="@+id/text_adress"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textSize="@dimen/text_size"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/mail_adress"
                android:layout_alignStart="@+id/mail_adress" />

            <EditText
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_mail_adress"
                android:id="@+id/mail_adress"
                android:layout_below="@+id/text_adress"
                android:layout_marginTop="@dimen/text_field_interval" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/text_pass"
                android:textSize="@dimen/text_size"
                android:layout_below="@+id/mail_adress"
                android:layout_alignLeft="@+id/mail_adress"
                android:layout_alignStart="@+id/mail_adress"
                android:layout_marginTop="@dimen/text_field_interval" />

            <EditText
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/input_password"
                android:id="@+id/password"
                android:layout_below="@+id/text_pass"
                android:layout_marginTop="@dimen/text_field_interval" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/text_pass_conf"
                android:textSize="@dimen/text_size"
                android:layout_below="@+id/password"
                android:layout_alignLeft="@+id/password"
                android:layout_alignStart="@+id/password"
                android:layout_marginTop="@dimen/text_field_interval" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/inout_confpass"
                android:id="@+id/pass_conf"
                android:layout_below="@+id/text_pass_conf"
                android:layout_marginTop="@dimen/text_field_interval" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>